@@ -1,4 +1,4 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ide.plugins.newui;
 
 import com.intellij.openapi.actionSystem.ActionManager;
@@ -13,7 +13,6 @@ import org.jetbrains.annotations.Nullable;
 import javax.swing.*;
 import java.awt.*;
 import java.awt.event.KeyEvent;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
 
@@ -53,9 +52,8 @@ public abstract class EventHandler {
   public void initialSelection(boolean scrollAndFocus) {
   }
 
-  @NotNull
-  public List<ListPluginComponent> getSelection() {
-    return Collections.emptyList();
+  public @NotNull List<? extends ListPluginComponent> getSelection() {
+    return List.of();
   }
 
   public void setSelection(@NotNull ListPluginComponent component) {
